@@ -1,3 +1,11 @@
+Fri Jul  2 19:07:09 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
+
+	* io.c (argf_inplace_mode_set): prohibits an assignment
+	  of a tainted value. Patch by unak.
+
+	* util.c, file.c: prevents a buffer over-run on windows.
+	  Patch by unak.
+
 Tue Jun 29 19:39:59 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>
 
 	* test/win32ole/test_win32ole_method.rb (is_ruby64): check
